Added photo and contact pages

--- a/contact.html
+++ b/contact.html
@@ -15,19 +15,7 @@
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
       crossorigin="anonymous"
     ></script>
-    <title>Croissant</title>
+    <title>Croissant: contact</title>
   </head>
-  <body>
-    <h1>Croissant</h1>
-    <p>
-      A croissant is a laminated, yeast-leavened bakery product that contains
-      dough/roll-in fat layers to create a flaky, crispy texture. Croissants
-      belong to the Viennoiserie or pastry category of baked goods along with
-      brioche, Danish and puff pastries. A croissant usually contains normal
-      levels of salt, yeast and sugar.
-    </p>
-    <a href="index.html">Homepage</a>
-    <a href="photo.html">Photo</a>
-    <a href="contact.html">Contact</a>
-  </body>
+  <body></body>
 </html>
