Added style and bootstrap

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,36 @@
       crossorigin="anonymous"
     ></script>
     <title>Croissant: contact</title>
+    <style>
+      body {
+        background-color: antiquewhite;
+      }
+
+      h1 {
+        text-align: center;
+        padding: 20px;
+      }
+
+      p {
+        text-align: center;
+      }
+
+      a {
+        text-decoration: none;
+        color: royalblue;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <h1>Croissant</h1>
+    <p>
+      You can contact with us by e-mail:
+      <a href="mailto:croissant@gmail.com">croissant@gmail.com</a>
+    </p>
+    <div class="d-flex justify-content-evenly">
+      <a href="index.html">Homepage</a>
+      <a href="photo.html">Photo</a>
+      <a href="contact.html">Contact</a>
+    </div>
+  </body>
 </html>
