--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
       crossorigin="anonymous"
     ></script>
     <title>Croissant</title>
+    <style>
+      body {
+        background-color: antiquewhite;
+      }
+
+      h1 {
+        text-align: center;
+        padding: 20px;
+      }
+
+      p {
+        text-align: center;
+      }
+
+      a {
+        text-decoration: none;
+        color: royalblue;
+      }
+    </style>
   </head>
   <body>
     <h1>Croissant</h1>
@@ -26,8 +45,10 @@
       brioche, Danish and puff pastries. A croissant usually contains normal
       levels of salt, yeast and sugar.
     </p>
-    <a href="index.html">Homepage</a>
-    <a href="photo.html">Photo</a>
-    <a href="contact.html">Contact</a>
+    <div class="d-flex justify-content-evenly">
+      <a href="index.html">Homepage</a>
+      <a href="photo.html">Photo</a>
+      <a href="contact.html">Contact</a>
+    </div>
   </body>
 </html>
