--- a/photo.html
+++ b/photo.html
@@ -16,15 +16,34 @@
       crossorigin="anonymous"
     ></script>
     <title>Croissant: photo</title>
+    <style>
+      body {
+        background-color: antiquewhite;
+      }
+
+      h1 {
+        text-align: center;
+        padding: 20px;
+      }
+
+      img {
+        max-width: 450px;
+        margin: 20px;
+      }
+
+      a {
+        text-decoration: none;
+        color: royalblue;
+      }
+    </style>
   </head>
   <body>
-    <h1>
-        Croissant
-    </h1>
-    <img src="img/croissant.jpeg" alt="" />
-    <a href="index.html">Homepage</a>
-    <a href="photo.html">Photo</a>
-    <a href="contact.html">Contact</a>
-  </body>
+    <h1>Croissant</h1>
+    <img class="rounded mx-auto d-block" src="img/croissant.jpeg" alt="" />
+    <div class="d-flex justify-content-evenly">
+      <a href="index.html">Homepage</a>
+      <a href="photo.html">Photo</a>
+      <a href="contact.html">Contact</a>
+    </div>
   </body>
 </html>
