--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,9 @@
       <a href="mailto:croissant@gmail.com">croissant@gmail.com</a>
     </p>
     <div class="d-flex justify-content-evenly">
-      <a href="index.html">Homepage</a>
-      <a href="photo.html">Photo</a>
-      <a href="contact.html">Contact</a>
+      <a href="index.html" title="Homepage">Homepage</a>
+      <a href="photo.html" title="Croissant photo">Photo</a>
+      <a href="contact.html" title="Contact">Contact</a>
     </div>
   </body>
 </html>
