--- a/photo.html
+++ b/photo.html
@@ -39,11 +39,15 @@
   </head>
   <body>
     <h1>Croissant</h1>
-    <img class="rounded mx-auto d-block" src="img/croissant.jpeg" alt="" />
+    <img
+      class="rounded mx-auto d-block"
+      src="img/croissant.jpeg"
+      alt="Croissant photo"
+    />
     <div class="d-flex justify-content-evenly">
-      <a href="index.html">Homepage</a>
-      <a href="photo.html">Photo</a>
-      <a href="contact.html">Contact</a>
+      <a href="index.html" title="Homepage">Homepage</a>
+      <a href="photo.html" title="Croissant photo">Photo</a>
+      <a href="contact.html" title="Contact">Contact</a>
     </div>
   </body>
 </html>
