--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A croissant is a laminated, yeast-leavened bakery product that contains
+    dough/roll-in fat layers to create a flaky, crispy texture."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,7 +20,7 @@
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
       crossorigin="anonymous"
     ></script>
-    <title>Croissant</title>
+    <title>Croissant: what is it</title>
     <style>
       body {
         background-color: antiquewhite;
@@ -46,9 +51,9 @@
       levels of salt, yeast and sugar.
     </p>
     <div class="d-flex justify-content-evenly">
-      <a href="index.html">Homepage</a>
-      <a href="photo.html">Photo</a>
-      <a href="contact.html">Contact</a>
+      <a href="index.html" title="Homepage">Homepage</a>
+      <a href="photo.html" title="Croissant photo">Photo</a>
+      <a href="contact.html" title="Contact">Contact</a>
     </div>
   </body>
 </html>
